fix the overlaping issue with navbar

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ img {
 	top: 0;
 	left: 0;
 	width: 100%;
+	z-index: 1;
 }
 
 #links-group {
